[package]
name = "hnapi"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Sebastien Castiel <sebastien@castiel.me>"]
description = "A library to query HackerNews."
homepage = "https://github.com/scastiel/hn"
repository = "https://github.com/scastiel/hn"

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
url = { version = "2.2.2", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
regex = "1.5.4"

[dev_dependencies]
serial_test = "0.5.1"
