[package]
name = "hn"
version = "0.1.0"
edition = "2021"
description = "Another HackerNews command-line client."
authors = ["Sebastien Castiel <sebastien@castiel.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
chrono = { version = "0.4.19", features = ["serde"] }
url = { version = "2.2.2", features = ["serde"] }
console = "0.15.0"
clap = "2.33.3"
webbrowser = "0.5.5"
textwrap = { version = "0.14.2", features = ["hyphenation"] }
hyphenation = "0.8.4"
html-escape = "0.2.9"
regex = "1"
minus = { version = "4.0.2", features = ["static_output"] }
futures = "0.3.17"
dirs = "4.0.0"
hnapi = { path = "../api", version = "0.1.0" }
