[package]
name = "hn-graphql"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A non-official HackerNews GraphQL API"
authors = ["Sebastien Castiel <sebastien@castiel.me>"]
homepage = "https://github.com/scastiel/hn"
repository = "https://github.com/scastiel/hn"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0"
juniper = { version = "0.15.7" }
juniper_warp = "0.7.0"
warp = "0.3"
hnapi = { path = "../api", version = "0.3.0" }